# SampleProject_CPP

./: .gitignore  CMakeLists.txt  README.md
documents/: README.md
include/: README.md  test.h
resources/: template.cpp  template.h
src/: main.cpp  test.cpp
